--- a/src/components/download-meta-data/download-meta-data.html
+++ b/src/components/download-meta-data/download-meta-data.html
@@ -20,7 +20,7 @@
   <ion-list style="background-color: white">
     <div *ngFor="let resourceObject of resources" style="background-color: white" >
 
-      <ion-item style="background-color: white">
+      <ion-item>
 
         <ion-checkbox color="blue" [(ngModel)]="resourceObject.status"></ion-checkbox>
         <ion-label> {{ resourceObject.displayName }} </ion-label>
