--- a/src/components/download-meta-data/download-meta-data.html
+++ b/src/components/download-meta-data/download-meta-data.html
@@ -1,7 +1,6 @@
 <!-- Generated template for the DownloadMetaDataComponent component -->
 
-
-<ion-grid style="background-color: white">
+<ion-grid class="backgroundContents">
 
   <ion-row >
     <ion-col>
@@ -15,9 +14,9 @@
   </ion-row>
   <!--{{ resources |json }}-->
 
-  <ion-row style="background-color: white">
-    <ion-col style="background-color: white">
-  <ion-list style="background-color: white">
+  <ion-row>
+    <ion-col >
+  <ion-list >
     <div *ngFor="let resourceObject of resources" style="background-color: white" >
 
       <ion-item>
