--- a/src/components/clear-local-metadata/clear-local-metadata.html
+++ b/src/components/clear-local-metadata/clear-local-metadata.html
@@ -1,6 +1,6 @@
 <!-- Generated template for the ClearLocalMetadataComponent component -->
 
-<ion-grid style="background-color: white">
+<ion-grid class="whiteBackground">
 
   <ion-row >
     <ion-col>
@@ -14,9 +14,9 @@
   </ion-row>
   <!--{{ resources |json }}-->
 
-  <ion-row style="background-color: white">
-    <ion-col style="background-color: white">
-      <ion-list style="background-color: white">
+  <ion-row >
+    <ion-col >
+      <ion-list >
         <div *ngFor="let resourceObject of resources" style="background-color: white" >
 
           <ion-item>
