--- a/src/pages/sync/sync.scss
+++ b/src/pages/sync/sync.scss
@@ -1,5 +1,12 @@
 page-sync {
 
+  .whiteBackground{
+    background-color: #F4F4F4;
+  }
+  .backgroundContents{
+    background-color: #F4F4F4;
+  }
+
   .item-md,.item-ios,.item .item-block .item-md .item-input,.item-inner,.input-wrapper .item-inner{
     background-color: #F4F4F4;
   }
