Update download data in sync

--- a/src/components/empty-list-notification/empty-list-notification.html
+++ b/src/components/empty-list-notification/empty-list-notification.html
@@ -1,5 +1,5 @@
 <ion-grid class="whiteBackground">
-  <ion-row>
+  <ion-row class="whiteBackground">
     <ion-col >
       <div class="empty-list">
         <div class="image-container">
