--- a/src/components/text-input-field/text-input-field.html
+++ b/src/components/text-input-field/text-input-field.html
@@ -1,3 +1,10 @@
-<div >
-  {{ dataElement.valueType }}
+<div *ngIf="valueType == 'LONG_TEXT'">
+  <ion-item>
+    <ion-textarea ></ion-textarea>
+  </ion-item>
+</div>
+<div *ngIf="valueType == 'TEXT'">
+  <ion-item>
+    <ion-input type="text" ></ion-input>
+  </ion-item>
 </div>
