--- a/src/components/date-input-field/date-input-field.html
+++ b/src/components/date-input-field/date-input-field.html
@@ -1,3 +1,3 @@
-<div >
-  {{ dataElement.valueType }}
-</div>
+<ion-item>
+  <ion-datetime doneText="Update" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" ></ion-datetime>
+</ion-item>
