--- a/src/components/numerical-input-field/numerical-input-field.html
+++ b/src/components/numerical-input-field/numerical-input-field.html
@@ -1,3 +1,21 @@
-<div >
-  {{ dataElement.valueType }}
+
+<div *ngIf="valueType == 'INTEGER' ||valueType == 'NUMBER'">
+  <ion-item>
+    <ion-input type="number" ></ion-input>
+  </ion-item>
+</div>
+<div *ngIf="valueType == 'INTEGER_POSITIVE'">
+  <ion-item>
+    <ion-input type="number" min="1" ></ion-input>
+  </ion-item>
+</div>
+<div *ngIf="valueType == 'INTEGER_NEGATIVE'">
+  <ion-item>
+    <ion-input type="number" max="-1" ></ion-input>
+  </ion-item>
+</div>
+<div *ngIf="valueType == 'INTEGER_ZERO_OR_POSITIVE'">
+  <ion-item>
+    <ion-input type="number" min="0" ></ion-input>
+  </ion-item>
 </div>
