add styles for input fields containers

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -258,6 +258,14 @@
   margin-bottom:5px;
 }
 
+.input-field-container{
+  border: 1px solid #E6E6E7;
+  border-radius: 0.3rem;
+  margin-top:5px;
+  margin-bottom:5px;
+  margin-right: 3px;
+}
+
 .pagination-button{
   border-radius: 4rem;
   text-align: center;
