--- a/src/components/input-container/input-container.html
+++ b/src/components/input-container/input-container.html
@@ -7,28 +7,26 @@
       {{ getLabel(dataElement.categoryCombo.name,categoryOptionCombo.name)}}
     </div>
 
-    <div *ngIf="dataElement.optionSet">
+    <div *ngIf="dataElement.optionSet" class="input-field-container">
       <option-set-input-field [dataElement]="dataElement"></option-set-input-field>
     </div>
+    <div *ngIf="!dataElement.optionSet" class="input-field-container">
+        <div *ngIf="textInputField.indexOf(dataElement.valueType) > -1">
+          <text-input-field [dataElement]="dataElement" [valueType]="dataElement.valueType"></text-input-field>
+        </div>
+        <div *ngIf="numericalInputField.indexOf(dataElement.valueType) > -1">
+          <numerical-input-field [dataElement]="dataElement" [valueType]="dataElement.valueType"></numerical-input-field>
+        </div>
 
-    <div *ngIf="!dataElement.optionSet">
-
-      <div *ngIf="textInputField.indexOf(dataElement.valueType) > -1">
-        <text-input-field [dataElement]="dataElement" [valueType]="dataElement.valueType"></text-input-field>
-      </div>
-      <div *ngIf="numericalInputField.indexOf(dataElement.valueType) > -1">
-        <numerical-input-field [dataElement]="dataElement" [valueType]="dataElement.valueType"></numerical-input-field>
-      </div>
-
-      <div *ngIf="dataElement.valueType == 'DATE'">
-        <date-input-field [dataElement]="dataElement"></date-input-field>
-      </div>
-      <div *ngIf="dataElement.valueType == 'TRUE_ONLY'">
-        <true-only-input-field [dataElement]="dataElement"></true-only-input-field>
-      </div>
-      <div *ngIf="dataElement.valueType == 'BOOLEAN'">
-        <boolean-input-field [dataElement]=""></boolean-input-field>
-      </div>
+        <div *ngIf="dataElement.valueType == 'DATE'">
+          <date-input-field [dataElement]="dataElement"></date-input-field>
+        </div>
+        <div *ngIf="dataElement.valueType == 'TRUE_ONLY'">
+          <true-only-input-field [dataElement]="dataElement"></true-only-input-field>
+        </div>
+        <div *ngIf="dataElement.valueType == 'BOOLEAN'">
+          <boolean-input-field [dataElement]=""></boolean-input-field>
+        </div>
     </div>
 
   </div>
