fxing padding entry form

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -258,6 +258,14 @@
   margin-bottom:5px;
 }
 
+.item-card-entry-form{
+  border: 1px solid #E6E6E7;
+  border-radius: 0.3rem;
+  padding: 5px 2px 5px 5px;
+  margin-top:5px;
+  margin-bottom:5px;
+}
+
 .input-field-container{
   border: 1px solid #E6E6E7;
   border-radius: 0.3rem;
