add option set option set selections, true oly and boolean

--- a/src/components/boolean-input-field/boolean-input-field.html
+++ b/src/components/boolean-input-field/boolean-input-field.html
@@ -1,3 +1,7 @@
-<div >
-  {{ dataElement.valueType }}
-</div>
+<ion-item>
+  <ion-label>Touch to select/update</ion-label>
+  <ion-select interface="action-sheet" >
+    <ion-option value="true">Yes</ion-option>
+    <ion-option value="false">No</ion-option>
+  </ion-select>
+</ion-item>
