--- a/src/components/option-set-input-field/option-set-input-field.html
+++ b/src/components/option-set-input-field/option-set-input-field.html
@@ -1,4 +1,6 @@
-<div >
-  {{ dataElement |json  }}
-  hfhhfhf
-</div>
+<ion-item>
+  <ion-label>Touch to select/update</ion-label>
+  <ion-select  interface="action-sheet" >
+    <ion-option *ngFor="let option of dataElement.optionSet.options" value="{{option.code}}">{{option.name}}</ion-option>
+  </ion-select>
+</ion-item>
