--- a/src/components/true-only-input-field/true-only-input-field.html
+++ b/src/components/true-only-input-field/true-only-input-field.html
@@ -1,3 +1,6 @@
-<div >
-  {{ dataElement.valueType }}
-</div>
+<ion-item>
+  <ion-label>Touch to select/update</ion-label>
+  <ion-select interface="action-sheet" >
+    <ion-option value="true">Yes</ion-option>
+  </ion-select>
+</ion-item>
