Fix download of metadata contents

--- a/src/components/download-events-data/download-events.html
+++ b/src/components/download-events-data/download-events.html
@@ -3,15 +3,18 @@
 <ion-grid>
   <ion-row>
     <div class="item-card" color="font-color" ion-button clear full text-center text-capitalize (tap)="openOrganisationUnitTree()" >
-      <!--<img  class="side-menu-icon" [src]="icons.orgUnit"/>&nbsp;&nbsp;-->
+      <img  class="side-menu-icon" [src]="icons.orgUnit"/>&nbsp;&nbsp;
       {{ organisationUnitLabel }}
     </div>
 
-    <div class="item-card" color="font-color" ion-button clear full text-center text-capitalize (tap)="openEntryFormList()" >
-      <!--<img  class="side-menu-icon" [src]="icons.dataSet"/>&nbsp;&nbsp;-->
+    <div class="item-card" color="font-color" ion-button clear full text-center text-capitalize (tap)="openProgramList()" >
+      <img  class="side-menu-icon" [src]="icons.program"/>&nbsp;&nbsp;
       {{ programLabel }}
     </div>
 
+
   </ion-row>
+
 </ion-grid>
+<button ion-button style="text-transform: none" (click)="donwloadEvents()">Download events</button>
 
