Add loading of background messages in sync

--- a/src/components/clear-local-metadata/clear-local-metadata.html
+++ b/src/components/clear-local-metadata/clear-local-metadata.html
@@ -14,7 +14,7 @@
   </ion-row>
   <!--{{ resources |json }}-->
 
-  <ion-row >
+  <ion-row *ngIf="!showLoadingMessage">
     <ion-col >
       <ion-list >
         <div *ngFor="let resourceObject of resources" style="background-color: white" >
@@ -30,7 +30,10 @@
     </ion-col>
   </ion-row>
 
-  <button ion-button style="text-transform: none;" (tap)="verifyingDeleteOfResources()">Clear MetaData</button>
+  <span *ngIf="showLoadingMessage" > <page-loading loadingSize="large" [loadingMessage]="updateMetaDataLoadingMessages"></page-loading> </span>
+
+  <button ion-button style="text-transform: none;" (tap)="verifyingDeleteOfResources()" block>Clear MetaData</button>
+
 
 </ion-grid>
 
