--- a/src/components/empty-list-notification/empty-list-notification.html
+++ b/src/components/empty-list-notification/empty-list-notification.html
@@ -1,6 +1,6 @@
 <ion-grid class="whiteBackground">
   <ion-row class="whiteBackground">
-    <ion-col >
+    <ion-col  class="whiteBackground">
       <div class="empty-list">
         <div class="image-container">
           <img [src]="imageUrl" >
