--- a/src/components/download-events-data/download-events.html
+++ b/src/components/download-events-data/download-events.html
@@ -16,5 +16,5 @@
   </ion-row>
 
 </ion-grid>
-<button ion-button style="text-transform: none" (click)="donwloadEvents()">Download events</button>
+<button ion-button style="text-transform: none" (click)="donwloadEvents()" block>Download events</button>
 
