--- a/src/components/clear-local-data/clear-local-data.html
+++ b/src/components/clear-local-data/clear-local-data.html
@@ -1,26 +1,29 @@
 <!-- Generated template for the ClearLocalDataComponent component -->
 
 <ion-row>
-  <ion-col>
+  <ion-col *ngIf="!showLoadingMessage">
     <ion-item>
       <ion-label>Data values</ion-label>
-      <ion-checkbox [(ngModel)]="updateManagerObject.dataDeletion.selectedItems.dataValues" (ionChange)="resetDeletedItems()"></ion-checkbox>
+      <ion-checkbox [(ngModel)]="selectedItems.dataValues" (ionChange)="resetDeletedItems()"></ion-checkbox>
     </ion-item>
     <ion-item>
       <ion-label>Events </ion-label>
-      <ion-checkbox [(ngModel)]="updateManagerObject.dataDeletion.selectedItems.events" (ionChange)="resetDeletedItems()" ></ion-checkbox>
+      <ion-checkbox [(ngModel)]="selectedItems.events" (ionChange)="resetDeletedItems()" ></ion-checkbox>
     </ion-item>
 
-    <button [disabled]="updateManagerObject.dataDeletion.itemsToBeDeleted.length < 1"
-            [color]="updateManagerObject.dataDeletion.isDataCleared?'primary':'whitecolor'"
+    <button [disabled]="itemsToBeDeleted.length < 1"
+            [color]="isDataCleared?'primary':'whitecolor'"
             class="normalButton" ion-button small  full text-capitalize (tap)="clearDataConfirmation()">
-                  <span *ngIf="!updateManagerObject.dataDeletion.isDataCleared" >
-                    <page-loading loadingSize="small"></page-loading>
-                  </span>
-      <span *ngIf="updateManagerObject.dataDeletion.isDataCleared" >
+
+      <span *ngIf="isDataCleared" >
                     Clear data
                   </span>
     </button>
 
   </ion-col>
+
 </ion-row>
+
+<span *ngIf="showLoadingMessage" >
+                    <page-loading loadingSize="large" [loadingMessage]="LoadingMessages"></page-loading>
+                  </span>
