--- a/src/components/empty-list-notification/empty-list-notification.html
+++ b/src/components/empty-list-notification/empty-list-notification.html
@@ -1,13 +1,12 @@
-<ion-grid class="whiteBackground">
-  <ion-row class="whiteBackground">
-    <ion-col  class="whiteBackground">
+<ion-grid >
+  <ion-row >
+    <ion-col  >
       <div class="empty-list">
         <div class="image-container">
           <img [src]="imageUrl" >
         </div>
         <p >{{ emptyListMessage }}</p>
       </div>
-
     </ion-col>
   </ion-row>
 
