--- a/src/pages/sync/sync.scss
+++ b/src/pages/sync/sync.scss
@@ -1,17 +1,10 @@
 page-sync {
 
-  .whiteBackground{
-    background-color: #F4F4F4;
-  }
-  .backgroundContents{
-    background-color: #F4F4F4;
-  }
-
   .item-md,.item-ios,.item .item-block .item-md .item-input,.item-inner,.input-wrapper .item-inner{
-    background-color: #F4F4F4;
+    background-color: #FFFFFF;
   }
   .item-md,.item-ios{
-    background-color: #F4F4F4;
+    background-color: #FFFFFF;
   }
 
   .item-md.item-block .item-inner {
