fix components background colours

--- a/src/components/download-meta-data/download-meta-data.html
+++ b/src/components/download-meta-data/download-meta-data.html
@@ -4,11 +4,11 @@
   <ion-row *ngIf="!showLoadingMessage">
     <ion-col>
     <button ion-button block style="text-transform: none;"
-            (tap)="autoSelect('selectAll')" > select all</button>
+            (tap)="autoSelect('selectAll')" > Select All</button>
     </ion-col>
     <ion-col>
     <button ion-button block style="text-transform: none;"
-            (tap)="autoSelect('unSelectAll')" >Deselect </button>
+            (tap)="autoSelect('unSelectAll')" >Deselect All </button>
     </ion-col>
   </ion-row>
   <ion-row *ngIf="!showLoadingMessage" >
