--- a/src/components/clear-local-data/clear-local-data.scss
+++ b/src/components/clear-local-data/clear-local-data.scss
@@ -1,3 +1,9 @@
 clear-local-data {
+  .item-md,.item-ios,.item .item-block .item-md .item-input,.item-inner,.input-wrapper .item-inner{
+    background-color: #ffffff;
+  }
+  .item-md,.item-ios{
+    background-color: #ffffff;
+  }
 
 }
