--- a/src/components/clear-local-metadata/clear-local-metadata.html
+++ b/src/components/clear-local-metadata/clear-local-metadata.html
@@ -1,15 +1,15 @@
 <!-- Generated template for the ClearLocalMetadataComponent component -->
 
-<ion-grid class="whiteBackground">
+<ion-grid>
 
   <ion-row *ngIf="!showLoadingMessage">
     <ion-col>
       <button ion-button block style="text-transform: none;"
-              (tap)="autoSelect('selectAll')" > select all</button>
+              (tap)="autoSelect('selectAll')" >Select All</button>
     </ion-col>
     <ion-col>
       <button ion-button block style="text-transform: none;"
-              (tap)="autoSelect('unSelectAll')" >Deselect </button>
+              (tap)="autoSelect('unSelectAll')" >Deselect All </button>
     </ion-col>
   </ion-row>
   <!--{{ resources |json }}-->
