--- a/src/components/clear-local-metadata/clear-local-metadata.scss
+++ b/src/components/clear-local-metadata/clear-local-metadata.scss
@@ -8,10 +8,10 @@ clear-local-metadata {
   }
 
   .item-md,.item-ios,.item .item-block .item-md .item-input,.item-inner,.input-wrapper .item-inner{
-    background-color: #F4F4F4;
+    background-color: #ffffff;
   }
   .item-md,.item-ios{
-    background-color: #F4F4F4;
+    background-color: #ffffff;
   }
   .item-md.item-block .item-inner {
     padding-right: 5px;
