--- a/src/pages/program-selection/program-selection.scss
+++ b/src/pages/program-selection/program-selection.scss
@@ -3,12 +3,11 @@ page-program-selection {
   .programFormSelection{
     background-color: #F4F4F4;
   }
-
   .item-md,.item-ios,.item .item-block .item-md .item-input,.item-inner,.input-wrapper .item-inner{
-    background-color: #F4F4F4;
+    background-color: #ffffff;
   }
   .item-md,.item-ios{
-    background-color: #F4F4F4;
+    background-color: #ffffff;
   }
 
   .item-md.item-block .item-inner {
