--- a/src/components/input-container/input-container.html
+++ b/src/components/input-container/input-container.html
@@ -1,5 +1,5 @@
 
-
+<!--listLayout  tableLayout  -->
 
 <div *ngIf="dataElement && dataElement.categoryCombo && dataElement.categoryCombo.categoryOptionCombos">
   <div *ngFor="let categoryOptionCombo of dataElement.categoryCombo.categoryOptionCombos">
