reset download data component

--- a/src/components/download-data/download-data.html
+++ b/src/components/download-data/download-data.html
@@ -1,31 +1,1 @@
-
-
-<ion-grid>
-  <div class="item-card" *ngFor="let downloadContent of downloadContents">
-    <ion-row (tap)="toggleDownloadContents(downloadContent)">
-      <ion-col col-11>
-        <img  class="side-menu-icon" [src]="downloadContent.icon"/>&nbsp;&nbsp;
-        <span ion-text [color]="(isDownloadContentOpen[downloadContent.id]) ?'current' : 'font-color'">
-              {{ downloadContent.name }}
-            </span>
-      </ion-col>
-      <ion-col col-1 item >
-        <div style="text-align: center;">
-          <ion-icon [color]="(isDownloadContentOpen[downloadContent.id]) ?'current' : 'font-color'" *ngIf="!(isDownloadContentOpen[downloadContent.id])" name="ios-arrow-down" item-right></ion-icon>
-          <ion-icon [color]="(isDownloadContentOpen[downloadContent.id]) ?'current' : 'font-color'" *ngIf="(isDownloadContentOpen[downloadContent.id])" name="ios-arrow-up" item-right></ion-icon>
-        </div>
-      </ion-col>
-    </ion-row>
-    <div *ngIf="(isDownloadContentOpen[downloadContent.id])" >
-      <hr>
-      <div *ngIf="downloadContent.id == 'dataValues'" >
-        <download-data-values></download-data-values>
-      </div>
-
-      <div *ngIf="downloadContent.id == 'events'" >
-        <download-events-data></download-events-data>
-      </div>
-
-    </div>
-  </div>
-</ion-grid>
+<empty-list-notification [emptyListMessage]="'Coming soon'"></empty-list-notification>
