add deletion and creation of dependant tables in metadata

--- a/src/components/upload-data-via-sms/upload-data-via-sms.html
+++ b/src/components/upload-data-via-sms/upload-data-via-sms.html
@@ -1,1 +1,54 @@
-<empty-list-notification [emptyListMessage]="'Coming soon'"></empty-list-notification>
+<!--<empty-list-notification [emptyListMessage]="'Coming soon'"></empty-list-notification>-->
+
+
+<ion-grid>
+  <ion-row>
+    <ion-col>
+      <div class="item-card" color="font-color" ion-button clear full text-center text-capitalize (tap)="openOrganisationUnitTree()" >
+        <img  class="side-menu-icon" [src]="icons.orgUnit"/>&nbsp;&nbsp;
+        {{ organisationUnitLabel }}
+      </div>
+
+
+      <div class="item-card" color="font-color" ion-button clear full text-center text-capitalize (tap)="openEntryFormList()" >
+        <img  class="side-menu-icon" [src]="icons.dataSet"/>&nbsp;&nbsp;
+
+        {{ dataSetLabel }}
+      </div>
+
+      <div class="item-card" color="font-color" ion-button clear full text-center text-capitalize (tap)="openPeriodList()" >
+        <img  class="side-menu-icon" [src]="icons.period"/>&nbsp;&nbsp;
+        {{ periodLabel }}
+      </div>
+
+      <div *ngIf="selectedPeriod && selectedPeriod.iso && dataSetCategoryCombo && dataSetCategoryCombo.id " >
+        <div *ngFor="let category of dataSetCategoryCombo.categories;let categoryIndex = index">
+          <div (tap)="openDataDimensionSelection(category)" class="item-card" color="font-color" full text-center text-wrap  >
+            <div style="padding-bottom: 5px;"><b>{{ category.name }}</b></div>
+            <div *ngIf="selectedDataDimension[categoryIndex]">{{ selectedDataDimension[categoryIndex].name }}</div>
+            <div *ngIf="!selectedDataDimension[categoryIndex]">Touch to select option</div>
+          </div>
+        </div>
+      </div>
+      <form #f="ngForm" (ngSubmit)="goSubmit(f)">
+        <div *ngIf="isFormReady" class="item-card" full >
+
+          <!--<div><b>Organisation Unit</b> : {{ organisationUnitLabel }}<br>-->
+          <!--<b>Form</b> : {{ dataSetLabel }}<br>-->
+          <!--<b>Period</b> : {{ periodLabel }}-->
+        </div>
+
+        <div>
+          <div class="item-card">
+            <ion-input type="number" name="mobileNumber" placeholder="Mobile Number" ngModel reqired></ion-input>
+          </div>
+          <button ion-button style="text-transform: none;" block type="submit"
+                  [disabled]="canSend" >Moblie Number</button>
+
+        </div>
+
+      </form>
+    </ion-col>
+  </ion-row>
+
+</ion-grid>
